<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/time_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />
            <RadioButton
                android:id="@+id/time_everyday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/everyday" />
            <RadioButton
                android:id="@+id/user_define_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/user_define_time" />

        </RadioGroup>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="#BFBFBF" />
    <RelativeLayout
        android:id="@+id/select_timeFrom_re"
        android:clickable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="36dp">
    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/from"
        android:textColor="#000"
        android:textSize="15sp"
        android:text="From:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/select_timeFrom_tv"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/from"
            android:textColor="#000"
            android:textSize="15sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="#BFBFBF" />
    <RelativeLayout
        android:id="@+id/select_timeTo_re"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="36dp">
        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/to"
            android:textColor="#000"
            android:textSize="15sp"
            android:text="To:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/select_timeTo_tv"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/to"
            android:textColor="#000"
            android:textSize="15sp"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="#BFBFBF" />
</LinearLayout>