<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_include" />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/id_refresh_wifiInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:clickable="true"
            android:id="@+id/id_changeWifi"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:id="@+id/id_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/WiFi"
                android:textColor="#000"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/id_wifi_name"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@+id/id_wifi"
                android:layout_toLeftOf="@+id/id_wifi_image"
                android:layout_centerVertical="true"
                android:textColor="#000"
                android:lines="1"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/id_wifi_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_signal_wifi_off_white_36dp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#BFBFBF" />
        <RelativeLayout
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textColorHint="#000"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_signAddress"
                    android:background="@null"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SignAddress"
                    android:textColorHint="#000"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#BFBFBF" />
        <RelativeLayout
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground">
            <android.support.design.widget.TextInputLayout
                android:layout_marginStart="16dp"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_signName"
                    android:background="@null"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SignName"
                    android:textColorHint="#000"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#BFBFBF" />
        <RelativeLayout
            android:id="@+id/id_chooseTime"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground">
            <TextView
                android:id="@+id/youxiaoshijian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/signtime"
                android:textColor="#000"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/youxiaoshijian"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/id_sign_data"
                android:lines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text=""
                android:textColor="#000"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/id_sign_time"
                android:lines="1"
                android:layout_below="@+id/id_sign_data"
                android:layout_toRightOf="@+id/youxiaoshijian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text=""
                android:textColor="#000"
                android:textSize="15sp" />
            </LinearLayout>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="#BFBFBF" />
        <Button
            android:id="@+id/create_qrCode"
            android:layout_margin="10dp"
            android:background="@drawable/signbutton"
            android:text="生成二维码"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/qrcode"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="300dp" />
    </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>